fix leave modal mode scaleY problem, optimize scrollbar mixin

--- a/src/style/0_settings/_settings.transition.scss
+++ b/src/style/0_settings/_settings.transition.scss
@@ -1,5 +1,5 @@
 $transition-duration-modal: .2s;
-$transition-duration-post-modal-mode: 30s;
+$transition-duration-post-modal-mode: .4s;
 $transition-ease-out: cubic-bezier(0, 0, 0.3, 1); // Paul Lewis style
 $transition-modal-overlay-hide: opacity $transition-duration-modal, visibility 0s $transition-duration-modal;
 $transition-modal-overlay-show: opacity $transition-duration-modal, visibility 0s;
