--- a/src/style/1_tools/_tools.mixin.cutom-scrollbar.scss
+++ b/src/style/1_tools/_tools.mixin.cutom-scrollbar.scss
@@ -1,6 +1,6 @@
-@mixin custom-scrollbar($foreground-color: $c-gray, $axis-x: false) {
-	$size: 8px;
-	$background-color: rgba(0, 0, 0, 0.03);
+// https://css-tricks.com/almanac/properties/s/scrollbar/
+// https://css-tricks.com/custom-scrollbars-in-webkit/
+@mixin custom-scrollbar($foreground-color: $c-gray, $background-color: rgba(0, 0, 0, 0.03), $size: 8px) {
 	&::-webkit-scrollbar {
 		width:  $size;
 		height: $size;
@@ -8,7 +8,6 @@
 
 	&::-webkit-scrollbar-thumb {
 		background: $foreground-color;
-		//box-shadow: 0 0 0 5px #00FF00;
 		border-radius: 5px;
 		&:hover {
 			box-shadow: 0 0 0 $size rgba(0, 0, 0, 0.05) inset;
@@ -18,18 +17,35 @@
 		}
 	}
 
-	$deg: 90deg;
-	@if ($axis-x) {
-		$deg: 0deg;
-	}
 	&::-webkit-scrollbar-track {
-		background: linear-gradient($deg,
-			rgba(0,0,0,0) 30%,
-			$background-color 30%,
-			$background-color 70%,
-			rgba(0,0,0,0) 70%
-		);
 		border-radius: 5px;
+		&:horizontal {
+			background: linear-gradient(0deg,
+				rgba(0,0,0,0) 30%,
+				$background-color 30%,
+				$background-color 70%,
+				rgba(0,0,0,0) 70%
+			);
+		}
+		&:vertical {
+			background: linear-gradient(90deg,
+				rgba(0,0,0,0) 30%,
+				$background-color 30%,
+				$background-color 70%,
+				rgba(0,0,0,0) 70%
+			);
+		}
+	}
+
+	// others
+	&::-webkit-scrollbar-track-piece {
+		background: transparent;
+	}
+	&::-webkit-scrollbar-corner {
+		background: transparent;
+	}
+	&::-webkit-scrollbar-button {
+		display: none;
 	}
 
 	// For Internet Explorer
