--- a/src/style/2_generic/_generic.normalize.scss
+++ b/src/style/2_generic/_generic.normalize.scss
@@ -12,4 +12,5 @@ body {
 	letter-spacing: 0.5px;
 	margin: 0;
 	color: $c-dark;
+	overflow: hidden;
 }
