--- a/src/style/5_components/_components.Board.scss
+++ b/src/style/5_components/_components.Board.scss
@@ -13,7 +13,7 @@
 		min-height: 0;
 	}
 	&__group-list-container {
-		@include custom-scrollbar(#dcd6c9, true);
+		@include custom-scrollbar(#dcd6c9);
 		@extend %grow-remain;
 		display: flex;
 		overflow-x: auto;
@@ -28,7 +28,7 @@
 		margin-left: 0;
 		border-radius: 0;
 		transform-origin: bottom right;
-		transition: .2s ease-out .1s;
+		transition: .3s ease-out .2s;
 	}
 	&--expand &__post-area-container {
 		border-radius: 50%;
@@ -36,16 +36,16 @@
 		right: 30px;
 		opacity: 0.3;
 		transform: scale(0);
-		transition: .2s ease-out;
+		transition: .3s ease-out;
 	}
 	&__btn-post-area {
 		visibility: hidden;
 		opacity: 0;
 		transform: scale(0);
 		transition:
-			opacity .2s ease-out,
-			transform .2s ease-out,
-			visibility 0s ease .2s;
+			opacity .3s ease-out,
+			transform .3s ease-out,
+			visibility 0s ease .3s;
 		/*display: none;*/
 	}
 	&--expand &__btn-post-area {
@@ -53,8 +53,8 @@
 		opacity: 1;
 		transform: scale(1);
 		transition:
-			opacity .1s ease-out .1s,
-			transform .1s ease-out .1s,
+			opacity .2s ease-out .2s,
+			transform .2s ease-out .2s,
 			visibility 0s ease 0s;
 		/*display: block;*/
 	}
